# naive-bench

./: bench.py
go_version/: go.mod  main.go
python_version/: parse.py  parse_ijson.py  parse_multiprocessing.py
rust_version/: Cargo.toml
rust_version/src/: main.rs
