[package]
name = "process"
version = "0.1.0"
authors = ["Sebastián Aedo <sebastian.aedo@sansano.usm.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
simd-json = "0.4"
rayon = "1.5"
chrono = "0.4"

[features]
simd_json = []
